# SQL2SHACL

./: .gitignore  LICENSE.md  README.md  pyproject.toml
assets/: sql2shacl_arch.drawio
docs/: datatypes.md  sql_constraints.md  sql_datatype_to_uri.md  testcases.md  w3c-spec.md
sql2shacl/: __init__.py  __main__.py  cli.py  constraint_rewriter.py
sql2shacl/components/: sqldatatype2xmlschema.json  unique_values_constraint.ttl
sql2shacl/shacl/: iri_builder.py  shacl_provider.py  shacl_shaper.py
sql2shacl/sql/: column.py  constraint.py  ddl.py  identifier.py  relation.py
sql2shacl/utils/: exceptions.py  logging.py
src/: cli.py  constraint_rewriter.py  iri_builder.py  main.py  shacl_provider.py  shacl_shaper.py  shapes.py  sql_parser.py  sqldatatype2xmlschema  table_classifier.py  table_parser.py
src/components/: sqldatatype2xmlschema.json  unique_values_constraint.ttl
src/shacl/: iri_builder.py  shacl_shaper.py
src/sql/: column.py  constraint.py  ddl.py  identifier.py  relation.py
src/utils/: exceptions.py  logging.py
testcases/: README.md
testcases/D000-1table1column0rows/: shape_thapa.ttl  shape_w3c.ttl
testcases/D001-1table1column1row/: sql2shacl_shape_v2.ttl
testcases/D002-1table2columns1row/: shape_thapa.ttl  shape_w3c.ttl  sql2shacl_shape_v2.ttl
testcases/D003-1table3columns1row/: shape_v2.ttl  shape_w3c.ttl  sql2shacl_shape.ttl  sql2shacl_shape_v2.ttl
testcases/D004-1table2columns1row/: shape.ttl  shape_thapa.ttl  sql2shacl_shape.ttl
testcases/D005-1table3columns3rows2duplicates/: shape.ttl  shape_thapa.ttl  (+4 more)
tests/: test_rewriting.py
(+88 files in other folders)
