[tool.poetry]
name = "sql2shacl"
version = "0.1.0"
description = ""
authors = ["Lukas Kubelka <lukas.kubelka@student.kit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rdflib = "^7.0.0"
sqlparse = "^0.5.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
